--- a/static/board.html
+++ b/static/board.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,201 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min">
     <title>Jeu de l'oie</title>
 </head>
+
 <body>
-    
-    <div class="container">
+    <button id="rollDices">Lancer les dés</button>
+    <div class="board-wrapper">
+        <div class="board-case" id="case-1">
+            <span>1</span>
+        </div>
+        <div class="board-case" id="case-2">
+            <span>2</span>
+        </div>
+        <div class="board-case" id="case-3">
+            <span>3</span>
+        </div>
+        <div class="board-case" id="case-4">
+            <span>4</span>
+        </div>
+        <div class="board-case" id="case-5">
+            <span>5</span>
+        </div>
+        <div class="board-case" id="case-6">
+            <span>6</span>
+        </div>
+        <div class="board-case" id="case-7">
+            <span>7</span>
+        </div>
+        <div class="board-case" id="case-8">
+            <span>8</span>
+        </div>
+        <div class="board-case" id="case-9">
+            <span>9</span>
+        </div>
+        <div class="board-case" id="case-28">
+            <span>28</span>
+        </div>
+        <div class="board-case" id="case-29">
+            <span>29</span>
+        </div>
+        <div class="board-case" id="case-30">
+            <span>30</span>
+        </div>
+        <div class="board-case" id="case-31">
+            <span>31</span>
+        </div>
+        <div class="board-case" id="case-32">
+            <span>32</span>
+        </div>
+        <div class="board-case" id="case-33">
+            <span>33</span>
+        </div>
+        <div class="board-case" id="case-34">
+            <span>34</span>
+        </div>
+        <div class="board-case" id="case-35">
+            <span>35</span>
+        </div>
+        <div class="board-case" id="case-10">
+            <span>10</span>
+        </div>
+        <div class="board-case" id="case-27">
+            <span>27</span>
+        </div>
+        <div class="board-case" id="case-48">
+            <span>48</span>
+        </div>
+        <div class="board-case" id="case-49">
+            <span>49</span>
+        </div>
+        <div class="board-case" id="case-50">
+            <span>50</span>
+        </div>
+        <div class="board-case" id="case-51">
+            <span>51</span>
+        </div>
+        <div class="board-case" id="case-52">
+            <span>52</span>
+        </div>
+        <div class="board-case" id="case-53">
+            <span>53</span>
+        </div>
+        <div class="board-case" id="case-36">
+            <span>36</span>
+        </div>
+        <div class="board-case" id="case-11">
+            <span>11</span>
+        </div>
+        <div class="board-case" id="case-26">
+            <span>26</span>
+        </div>
+        <div class="board-case" id="case-47">
+            <span>47</span>
+        </div>
+        <div class="board-case" id="case-60">
+            <span>60</span>
+        </div>
+        <div class="board-case" id="case-61">
+            <span>61</span>
+        </div>
+        <div class="board-case" id="case-62">
+            <span>62</span>
+        </div>
+        <div class="board-case" id="case-63">
+            <span>63</span>
+        </div>
+        <div class="board-case" id="case-54">
+            <span>54</span>
+        </div>
+        <div class="board-case" id="case-37">
+            <span>37</span>
+        </div>
+        <div class="board-case" id="case-12">
+            <span>12</span>
+        </div>
+        <div class="board-case" id="case-25">
+            <span>25</span>
+        </div>
+        <div class="board-case" id="case-46">
+            <span>46</span>
+        </div>
+        <div class="board-case" id="case-59">
+            <span>59</span>
+        </div>
+        <div class="board-case" id="case-58">
+            <span>58</span>
+        </div>
+        <div class="board-case" id="case-57">
+            <span>57</span>
+        </div>
+        <div class="board-case" id="case-56">
+            <span>56</span>
+        </div>
+        <div class="board-case" id="case-55">
+            <span>55</span>
+        </div>
+        <div class="board-case" id="case-38">
+            <span>38</span>
+        </div>
+        <div class="board-case" id="case-13">
+            <span>13</span>
+        </div>
+        <div class="board-case" id="case-24">
+            <span>24</span>
+        </div>
+        <div class="board-case" id="case-45">
+            <span>45</span>
+        </div>
+        <div class="board-case" id="case-44">
+            <span>44</span>
+        </div>
+        <div class="board-case" id="case-43">
+            <span>43</span>
+        </div>
+        <div class="board-case" id="case-42">
+            <span>42</span>
+        </div>
+        <div class="board-case" id="case-41">
+            <span>41</span>
+        </div>
+        <div class="board-case" id="case-40">
+            <span>40</span>
+        </div>
+        <div class="board-case" id="case-39">
+            <span>39</span>
+        </div>
+        <div class="board-case" id="case-14">
+            <span>14</span>
+        </div>
+        <div class="board-case" id="case-23">
+            <span>23</span>
+        </div>
+        <div class="board-case" id="case-22">
+            <span>22</span>
+        </div>
+        <div class="board-case" id="case-21">
+            <span>21</span>
+        </div>
+        <div class="board-case" id="case-20">
+            <span>20</span>
+        </div>
+        <div class="board-case" id="case-19">
+            <span>19</span>
+        </div>
+        <div class="board-case" id="case-18">
+            <span>18</span>
+        </div>
+        <div class="board-case" id="case-17">
+            <span>17</span>
+        </div>
+        <div class="board-case" id="case-16">
+            <span>16</span>
+        </div>
+        <div class="board-case" id="case-15">
+            <span>15</span>
+        </div>
 
     </div>
 </body>
+
 </html>
