--- a/static/board.html
+++ b/static/board.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <div class="pawn" id="player1"></div>
+    <div class="pawn" id="player2"></div>
     <div class="container">
         <button id="rollDices">Lancer les dés</button>
         <div class="board-wrapper">
