--- a/static/board.html
+++ b/static/board.html
@@ -204,8 +204,10 @@
                 <span>15</span>
             </div>
         </div>
-
     </div>
 </body>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+<script>let socket = io();</script>
+<script src="assets/js/board.js"></script>
 </html>
