--- a/static/index.html
+++ b/static/index.html
@@ -6,12 +6,13 @@
 </head>
 <body>
     <h2>Bienvenue</h2>
-    <button>Commencer une partie</button>
+    <button id="startGame">Commencer une partie</button>
 </body>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+
 <script>
     let socket = io();
-</script>
+</script><script src="assets/js/index.js"></script>
 </html>
