--- a/static/board.html
+++ b/static/board.html
@@ -224,4 +224,20 @@
 <script>let socket = io();</script>
 <script src="assets/js/board.js"></script>
 
+<script>
+function getNewPosition(dest) {
+    destination = document.getElementById(`case-${dest}`);
+    let destinationTop = destination.offsetTop;
+    let destinationLeft = destination.offsetLeft;
+    position = {
+        parent: destination,
+        top: destinationTop,
+        left: destinationLeft
+    }
+    return position;
+}
+console.log(getNewPosition(57));
+
+</script>
+
 </html>
