ADD PLAYER GAME #3

--- a/static/index.html
+++ b/static/index.html
@@ -6,13 +6,12 @@
 </head>
 <body>
     <h2>Bienvenue</h2>
+    <input type="text" name="player" id="playerName" placeholder="Entrez votre nom">
     <button id="startGame">Commencer une partie</button>
 </body>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
-
-<script>
-    let socket = io();
-</script><script src="assets/js/index.js"></script>
+<script> let socket = io();</script>
+<script src="assets/js/index.js"></script>
 </html>
