ADD PLAYER GAME #4

--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
 <body>
     <h2>Bienvenue</h2>
     <input type="text" name="player" id="playerName" placeholder="Entrez votre nom">
-    <button id="startGame">Commencer une partie</button>
+    <button id="startGame" disabled>Accès au plateau</button>
 </body>
 
 
