--- a/static/board.html
+++ b/static/board.html
@@ -222,5 +222,20 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
 <script src="assets/js/board.js"></script>
-
+<script>
+    //Des que tu as fini intègre ça au board.js stp
+    socket.on('start game', (data) => {
+        if (data.isOk == false) {
+            alert('En attente d un adversaire');
+            rollDices.style.display = "none"
+        } else {
+            let oneTime = true;
+            if (oneTime) {
+                alert('La partie peut commencer');
+                this.oneTime = false;
+            }
+            rollDices.style.display = "block"
+        }
+    });
+</script>
 </html>
