--- a/static/board.html
+++ b/static/board.html
@@ -34,7 +34,7 @@
                         <span>5</span>
                     </div>
                     <div class="board-case" id="case-6">
-                        <span>6</span>
+                        <span>6<br/><small>-> 9</small></span>
                     </div>
                     <div class="board-case" id="case-7">
                         <span>7</span>
@@ -166,7 +166,7 @@
                         <span>43</span>
                     </div>
                     <div class="board-case" id="case-42">
-                        <span>42</span>
+                        <span>42<br/><small>->30</small></span>
                     </div>
                     <div class="board-case" id="case-41">
                         <span>41</span>
