gestion des tours #1

--- a/static/board.html
+++ b/static/board.html
@@ -213,6 +213,7 @@
                 <div id="player1Name"></div>
                 <div id="player2Name"></div>
                 <button id="rollDices">Lancer les dés</button>
+                <div id="msgPlayer"></div>
                 <div class="row dice-result-wrapper">
                     <div class="col-6">Dé 1 : <span id="diceResult1"></span></div>
                     <div class="col-6">Dé 2 : <span id="diceResult2"></span></div>
