--- a/static/board.html
+++ b/static/board.html
@@ -218,6 +218,7 @@
                     <div class="col-6">Dé 1 : <span id="diceResult1"></span></div>
                     <div class="col-6">Dé 2 : <span id="diceResult2"></span></div>
                 </div>
+                <div id="infoGame"></div>
             </div>
         </div>
     </div>
